--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/ResetPassword.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/ResetPassword.cshtml
@@ -3,6 +3,7 @@
 @{
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
     ViewBag.Title = "Reset Password";
+    string actionName = string.IsNullOrEmpty(Model.PasswordToken) ? "ResetPasswordSendLink" : "ResetPassword";
 }
 <div class="card-body p-0 auth-content">
     <ul class="nav-border nav nav-pills" role="tablist">
@@ -13,16 +14,38 @@
     <!-- Tab panes -->
     <div class="tab-content">
         <div class="tab-pane active p-3" id="LogIn_Tab" role="tabpanel">
-            @using (Html.BeginForm("ResetPassword", "User", FormMethod.Post))
+            @using (Html.BeginForm(actionName, "User", FormMethod.Post))
             {
                 @Html.AntiForgeryToken()
-                <div class="form-group mb-2">
-                    @Html.LabelFor(x => x.UserName, new { @class = "form-label" })
-                    <div class="input-group">
-                        @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", placeholder = "username..." })
+                @if (string.IsNullOrEmpty(Model.PasswordToken))
+                {
+                    <div class="form-group mb-2">
+                        @Html.LabelFor(x => x.UserName, new { @class = "form-label" })
+                        <div class="input-group">
+                            @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", placeholder = "username..." })
+                        </div>
+                        @Html.ValidationMessageFor(m => m.UserName, null)
                     </div>
-                    @Html.ValidationMessageFor(m => m.UserName, null)
-                </div>
+                }
+                else
+                {
+                    @Html.HiddenFor(x => x.PasswordToken)
+                    <div class="form-group mb-2">
+                        @Html.LabelFor(x => x.NewPassword, new { @class = "form-label required" })
+                        <div class="input-group">
+                            @Html.TextBoxFor(x => x.NewPassword, new { @class = "form-control" })
+                        </div>
+                        @Html.ValidationMessageFor(m => m.NewPassword, null)
+                    </div>
+                    <div class="form-group mb-2">
+                        @Html.LabelFor(x => x.ConfirmPassword, new { @class = "form-label required" })
+                        <div class="input-group">
+                            @Html.TextBoxFor(x => x.ConfirmPassword, new { @class = "form-control" })
+                        </div>
+                        @Html.ValidationMessageFor(m => m.ConfirmPassword, null)
+                    </div>
+
+                }
                 <div class="form-group row my-3">
                     <div class="col-sm-6">
                         <div class="custom-control custom-switch switch-success">
