--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentrewiseSmsSetting.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentrewiseSmsSetting.cshtml
@@ -2,6 +2,7 @@
 @{
     Layout = null;
 }
+@Html.HiddenFor(m => m.OrganisationCentrewiseSmsSettingId)
 <div class="col-lg-4">
     <div class="mb-3">
         @Html.LabelFor(x => x.SmsPortalAccountId, new { @class = "form-label" })
