--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
@@ -27,6 +27,10 @@
                     <i class="fa fa-comments"></i>
                     <h5 class="m-0 ps-2">Centre SMS Setting</h5>
                 </a>
+                <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseWhatsAppSetup?organisationCentreId=@Model" aria-selected="true">
+                    <i class="fa fa-whatsapp"></i>
+                    <h5 class="m-0 ps-2">Centre WhatsApp Setting</h5>
+                </a>
                 <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseEmailTemplateSetup?organisationCentreId=@Model" aria-selected="true">
                     <i class="fas fa-envelope"></i>
                     <h5 class="m-0 ps-2">Centre Email Template</h5>
