--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_LayoutLogin.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_LayoutLogin.cshtml
@@ -26,6 +26,7 @@
 <body data-layout="horizontal" class="account-body accountbg" data-new-gr-c-s-check-loaded="14.1113.0" data-gr-ext-installed="" style="background: url(@applicationLayoutBackground)">
     <!-- Log In page -->
     <div class="container login-page-wrapper">
+        @Html.Partial("~/Views/Shared/_NotificationMessage.cshtml", @messageData)
         <div class="row vh-100 d-flex justify-content-center">
             <div class="col-12 align-self-center">
                 <div class="row">
@@ -41,12 +42,7 @@
                                 </div>
                             </div>
                             <!-- Page Content-->
-                            <div class="page-wrapper">
-                                @Html.Partial("~/Views/Shared/_NotificationMessage.cshtml", @messageData)
-                                <!-- Page Content-->
-                                @RenderBody()
-                                <!-- end page content -->
-                            </div>
+                            @RenderBody()
                             <!-- end page content -->
                             <div class="card-body bg-light-alt text-center auth-footer">
                                 <span class="text-muted d-none d-sm-inline-block">
@@ -66,6 +62,7 @@
     <script src="~/js/login/waves.js"></script>
     <script src="~/js/login/feather.min.js"></script>
     <script src="~/js/login/simplebar.min.js"></script>
+    <script src="~/js/coditech/common/coditechnotification.js"></script>
 </body>
 @await RenderSectionAsync("Scripts", required: false)
 </html>
