--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/ResetPassword.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/ResetPassword.cshtml
@@ -41,14 +41,14 @@
                     <div class="form-group mb-2">
                         @Html.LabelFor(x => x.NewPassword, new { @class = "form-label required" })
                         <div class="input-group">
-                            @Html.TextBoxFor(x => x.NewPassword, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.NewPassword, new { @class = "form-control", type = "password" })
                         </div>
                         @Html.ValidationMessageFor(m => m.NewPassword, null)
                     </div>
                     <div class="form-group mb-2">
                         @Html.LabelFor(x => x.ConfirmPassword, new { @class = "form-label required" })
                         <div class="input-group">
-                            @Html.TextBoxFor(x => x.ConfirmPassword, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.ConfirmPassword, new { @class = "form-control", type = "password" })
                         </div>
                         @Html.ValidationMessageFor(m => m.ConfirmPassword, null)
                     </div>
