--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/CreateEdit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model HospitalPatientAppointmentViewModel
 @{
-    ViewBag.Title = Model.HospitalPatientAppointmentId > 0 ? "Update Hospital Patient Appointment" : "Add Hospital Patient Appointment";
+    ViewBag.Title = Model.HospitalPatientAppointmentId > 0 ? "Update Patient Appointment" : "Add Patient Appointment";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalPatientAppointment.GetDoctorsByCentreCodeAndSpecialization()", IsDisabled = Model.HospitalPatientAppointmentId > 0 };
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalPatientAppointment.GetDoctorsAndPatientsListByCentreCodeAndSpecialization()", IsDisabled = Model.HospitalPatientAppointmentId > 0 };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -20,7 +20,7 @@
                                 }
                                 else
                                 {
-                                    <h4 class="card-title">Create Hospital Patient Appointment</h4>
+                                    <h4 class="card-title">Add Patient Appointment</h4>
                                 }
                             </div><!--end col-->
                         </div>  <!--end row-->
@@ -32,28 +32,24 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required"})
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
                                         @Html.ValidationMessageFor(x => x.SelectedCentreCode)
                                     </div>
                                 </div>
-
-
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.MedicalSpecilizationEnumId, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.MedicalSpecilizationEnumId, new { @class = "form-label required"})
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownSelectedValue = Model.MedicalSpecilizationEnumId.ToString(),
                                    DropdownName = "MedicalSpecilizationEnumId",
                                    GroupCode = DropdownTypeEnum.MedicalSpecilization.ToString(),
-                                   ChangeEvent = "HospitalPatientAppointment.GetDoctorsByCentreCodeAndSpecialization()"
+                                   ChangeEvent = "HospitalPatientAppointment.GetDoctorsAndPatientsListByCentreCodeAndSpecialization()"
                                })
                                         @Html.ValidationMessageFor(x => x.MedicalSpecilizationEnumId)
                                     </div>
                                 </div>
-
-
                                 @if (Model.HospitalPatientAppointmentId > 0)
                                 {
                                     @Html.HiddenFor(x => x.HospitalDoctorId)
@@ -62,14 +58,15 @@
                                 {
                                     <div class="col-lg-4">
                                         <div class="mb-3">
-                                            @Html.LabelFor(x => x.HospitalDoctorId, new { @class = "form-label " })
+                                            @Html.LabelFor(x => x.HospitalDoctorId, new { @class = "form-label required" })
                                             @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownType = DropdownTypeEnum.HospitalDoctorsListBySpecialization.ToString(),
                                    DropdownName = "HospitalDoctorId",
                                    DropdownSelectedValue = Model.HospitalDoctorId
                                     .ToString(),
-                                   Parameter = !string.IsNullOrEmpty(Model.SelectedCentreCode) ? $"{Model.SelectedCentreCode}~{Model.MedicalSpecilizationEnumId}" : ""
+                                   Parameter = !string.IsNullOrEmpty(Model.SelectedCentreCode) ? $"{Model.SelectedCentreCode}~{Model.MedicalSpecilizationEnumId}" : "",
+                                   ChangeEvent = "HospitalPatientAppointment.GetTimeSlotByDoctorsAndAppointmentDate()"
                                })
                                             @Html.ValidationMessageFor(x => x.HospitalDoctorId)
                                         </div>
@@ -77,9 +74,24 @@
                                 }
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.AppointmentDate, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.HospitalPatientRegistrationId, new { @class = "form-label required"})
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownType = DropdownTypeEnum.CentrewiseHospitalPatientsList.ToString(),
+                                   DropdownName = "HospitalPatientRegistrationId",
+                                   DropdownSelectedValue = Model.HospitalPatientRegistrationId
+                                    .ToString(),
+                                   Parameter = Model.SelectedCentreCode
+                               })
+                                        @Html.ValidationMessageFor(x => x.HospitalPatientRegistrationId)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.AppointmentDate, new { @class = "form-label required"})
                                         @Html.TextBoxFor(x => x.AppointmentDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.AppointmentDate)
+
                                     </div>
                                 </div>
                                 @if (Model.HospitalPatientAppointmentId > 0)
@@ -90,7 +102,7 @@
                                 {
                                     <div class="col-lg-4">
                                         <div class="mb-3">
-                                            @Html.LabelFor(x => x.AppointmentTypeEnumId, new { @class = "form-label" })
+                                            @Html.LabelFor(x => x.AppointmentTypeEnumId, new { @class = "form-label required"})
                                             @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownSelectedValue = Model.AppointmentTypeEnumId.ToString(),
@@ -104,18 +116,20 @@
                                 }
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.RequestedTimeSlot, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.RequestedTimeSlot, new { @class = "form-label required"})
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
-                                   DropdownSelectedValue = Model.RequestedTimeSlot.ToString(),
+                                   DropdownType = DropdownTypeEnum.TimeSlotByDoctorsListAndAppointmentDate.ToString(),
                                    DropdownName = "RequestedTimeSlot",
+                                   DropdownSelectedValue = Model.RequestedTimeSlot.ToString(),
+                                   Parameter = !string.IsNullOrEmpty(Model.HospitalDoctors) ? Model.HospitalDoctorId.ToString() + "~" + Model.AppointmentDate : "",
                                })
                                         @Html.ValidationMessageFor(x => x.RequestedTimeSlot)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.HospitalPatientAppointmentPurposeId, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.HospitalPatientAppointmentPurposeId, new { @class = "form-label required"})
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownType = DropdownTypeEnum.HospitalPatientAppointmentPurpose.ToString(),
@@ -125,24 +139,9 @@
                                         @Html.ValidationMessageFor(x => x.HospitalPatientAppointmentPurposeId)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.ApprovalStatusEnumId, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.ApprovalStatusEnumId, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.ApprovalStatusEnumId)
-                                    </div>
-                                </div>
-                                <div class="col-lg-2">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsAttended, new { @class = "form-label required" })
-                                        <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsAttended, new { @class = "form-check-input" })
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                            <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.SelectedCentreCode class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
@@ -166,7 +165,7 @@
                 closeText: 'Clear',
                 onClose: function (dateText, inst) {
                     if ($(window.event.srcElement).hasClass('ui-datepicker-close')) {
-                        document.getElementById(this.id).value = '';
+                        $("#AppointmentDate").val('');
                     }
                 },
                 minDate: new Date(),
@@ -176,3 +175,13 @@
     </script>
 }
 <script src="~/js/coditech/HMS/HospitalPatientAppointment.js"></script>
+
+
+
+
+
+
+
+
+
+
