--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/List.cshtml
@@ -1,10 +1,8 @@
 ﻿@model HospitalPatientAppointmentListViewModel
 @{
-    ViewBag.Title = "Hospital Patient Appointment List";
+    ViewBag.Title = "Patient Appointment List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    //DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.GetDepartmentByCentreCode()" };
-   // DropdownViewModel departmentDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDepartment.ToString(), DropdownName = "SelectedDepartmentId", DropdownSelectedValue = Model.SelectedDepartmentId.ToString(), Parameter = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.LoadListByCentreCodeAndDepartmentId('" + @controllerName + "','" + @actionName + "')" };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -13,8 +11,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        @* <span class="card-title">@AdminResources.LabelCountryList</span> *@
-                        <span class="card-title">Hospital Patient Appointment List</span>
+                        <span class="card-title">Patient Appointment List</span>
                         <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Appointment</a>
 
                     </div>
