--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/_List.cshtml
@@ -22,14 +22,16 @@
                             <td>@item.FirstName</td>
                             <td>@item.LastName</td>
                             <td>@item.MobileNumber</td>
-                            <td>@item.AppointmentTypeEnumId</td>
+                            <td>@item.AppointmentType</td>
                             <td>@item.AppointmentDate</td>
                             <td>@item.RequestedTimeSlot</td>
                             <td>@item.ApprovalStatusEnumId</td>
-                            <td>@item.IsAttended</td>
+                            <td>
+                                @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsAttended)
+                            </td>
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?hospitalPatientAppointmentId=@item.HospitalPatientAppointmentId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?hospitalPatientAppointmentIds=@item.HospitalPatientAppointmentId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/Delete?hospitalPatientAppointmentIds=@item.HospitalPatientAppointmentId&SelectedCentreCode=@Model.SelectedCentreCode" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
