--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
@@ -28,7 +28,7 @@
                     <h5 class="m-0 ps-2">Centre SMS Setting</h5>
                 </a>
                 <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseWhatsAppSetup?organisationCentreId=@Model" aria-selected="true">
-                    <i class="fa fa-whatsapp"></i>
+                    <i class="mdi mdi-whatsapp"></i>
                     <h5 class="m-0 ps-2">Centre WhatsApp Setting</h5>
                 </a>
                 <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseEmailTemplateSetup?organisationCentreId=@Model" aria-selected="true">
