--- a/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/site.css
+++ b/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/site.css
@@ -198,6 +198,8 @@ label {
 .page-wrapper .page-content {
     padding: 26px 8px 52px 8px;
     min-height: calc(100vh - 52px - 2px - 31px) !important;
+    background: url(http://poweredathletes.in/assets/images/auth-bg.jpg);
+    background-position: top center;
 }
 
 
@@ -266,4 +268,8 @@ td.text-center a.btn {
 }
 .footer {
     background: #ffffff;
+}
+
+.card.sidebar-card {
+    background: rgba(255, 255, 255, 1);
 }
