--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientRegistration/_PatientRegistrationSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientRegistration/_PatientRegistrationSidePannel.cshtml
@@ -6,7 +6,7 @@
     long personId = Convert.ToInt64(Model?.FirstOrDefault(x => x.Key == "PersonId").Value);
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
-<div class="card">
+<div class="card sidebar-card">
     <div class="card-body">
         <div class="files-nav">
             <div class="nav flex-column nav-pills" id="files-tab" aria-orientation="vertical">
