--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = null;
 }
-<div class="card">
+<div class="card sidebar-card">
     <div class="card-body">
         <div class="files-nav">
             <div class="nav flex-column nav-pills" id="files-tab" aria-orientation="vertical">
