Code Checking For Centrewise SMS And WhatsApp Template.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
@@ -35,6 +35,14 @@
                     <i class="fas fa-envelope"></i>
                     <h5 class="m-0 ps-2">Centre Email Template</h5>
                 </a>
+                <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseSMSTemplateSetup?organisationCentreId=@Model" aria-selected="true">
+                    <i class="fa fa-comments"></i>
+                    <h5 class="m-0 ps-2">Centre SMS Template</h5>
+                </a>
+                <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseWhatsAppTemplateSetup?organisationCentreId=@Model" aria-selected="true">
+                    <i class="mdi mdi-whatsapp"></i>
+                    <h5 class="m-0 ps-2">Centre WhatsApp Template</h5>
+                </a>
                 <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseUserNameRegistrationList?organisationCentreId=@Model" aria-selected="true">
                     <i class="fas fa-user-tie"></i>
                     <h5 class="m-0 ps-2">Centre UserName Registration</h5>
