--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
@@ -25,8 +25,9 @@
                 </div>
                 <div class="form-group mb-2">
                     @Html.LabelFor(x => x.Password, new { @class = "form-label" })
-                    <div class="input-group">
-                        @Html.TextBoxFor(x => x.Password, new { @class = "form-control", type = "password", placeholder = "Password here..." })
+                    <div class="input-group password-input-wraper">
+                        @Html.TextBoxFor(x => x.Password, new { @class = "form-control password-input", type = "password", placeholder = "Password here..." })
+                        <i class="fas fa-eye view-password"></i>
                     </div>
                     @Html.ValidationMessageFor(m => m.Password, null)
                     @Html.ValidationMessageFor(m => m.ErrorMessage, null)
