Theme color CSS changes

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
     <link href="~/css/layout/bootstrap-select.min.css" rel="stylesheet" />
     <link href="~/css/layout/site.css" rel="stylesheet" />
     <link href="~/css/layout/jstree.css" rel="stylesheet" />
+    <link href="~/css/layout/red-theme.css" rel="stylesheet" />
 </head>
 
 <body data-layout="horizontal" class="dark-topbar" data-new-gr-c-s-check-loaded="14.1113.0" data-gr-ext-installed="" style="background: url(@applicationLayoutBackground);">
