--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 text-end">
-                        <a href="/user/resetpassword" class="text-muted font-13"><i class="dripicons-lock"></i>Forgot password?</a>
+                        <a href="/user/resetpassword" class="text-muted font-13 forgot-password"><i class="dripicons-lock"></i>Forgot password?</a>
                     </div>
                 </div>
                 <div class="form-group mb-0 row">
