--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaSettingMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaSettingMaster/CreateEdit.cshtml
@@ -15,11 +15,11 @@
                             <div class="col">
                                 @if (Model.MediaSettingMasterId > 0)
                                 {
-                                    <h4 class="card-title">Update Media Setting Master</h4>
+                                    <h4 class="card-title">Update @Model.MediaType Setting</h4>
                                 }
                                 else
                                 {
-                                    <h4 class="card-title">Create Media Setting Master</h4>
+                                    <h4 class="card-title">Create @Model.MediaType Setting</h4>
                                 }
                             </div><!--end col-->
                         </div>  <!--end row-->
