--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/MediaUpload.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/MediaUpload.cshtml
@@ -1,5 +1,7 @@
 ﻿@model MediaManagerFolderListViewModel
-
+@{
+    ViewBag.Title = "Media Manager";
+}
 <div id="MediaUpload">
     @Html.Partial("~/Views/MediaManager/MediaManagerDetails/_MediaDetails.cshtml", Model)
 </div>
