Red theme CSS changes

--- a/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/site.css
+++ b/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/site.css
@@ -288,3 +288,8 @@ td.text-center a.btn {
     top: 10px;
     cursor: pointer;
 }
+#LogIn_Tab .custom-switch.switch-success #customSwitchSuccess {
+    position: relative;
+    top: 2px;
+}
+
