Code Checking for Log Message .

--- a/Coditech.Project/Admin/Coditech.Admin/Views/LogMessage/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/LogMessage/_List.cshtml
@@ -18,9 +18,10 @@
                     foreach (var item in Model?.LogMessageList)
                     {
                         <tr>
-                            <td>@item.ErrorMessageType</td>
-                            <td>@item.ComponentName</td>
                             <td>@item.ExceptionMessage</td>
+                            <td>@item.ComponentName</td>
+                            <td>@item.TraceLevel</td>
+                            <td>@item.CreatedDate</td>
                             <td class="text-center">
                                 <a href="../@controllerName/GetLogMessage?logMessageId=@item.LogMessageId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a href="../@controllerName/Delete?logMessageIds=@item.LogMessageId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
