--- a/Coditech.Project/Admin/Coditech.Admin/Views/LogMessage/LogMessage.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/LogMessage/LogMessage.cshtml
@@ -33,20 +33,44 @@
                             </div>
                             <div class="col-lg-3">
                                 <div class="mb-3">
-                                    @Html.LabelFor(x => x.ComponentName, new { @class = "form-label" })
+                                    @Html.LabelFor(x => x.ComponentName, new { @class = "form-label" })<br />
                                     @Html.DisplayFor(x => x.ComponentName, new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="col-lg-3">
                                 <div class="mb-3">
-                                    @Html.LabelFor(x => x.TraceLevel, new { @class = "form-label" })
+                                    @Html.LabelFor(x => x.TraceLevel, new { @class = "form-label" })<br />
                                     @Html.DisplayFor(x => x.TraceLevel, new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="mb-3">
-                                    @Html.LabelFor(x => x.TraceLevel, new { @class = "form-label" })
-                                    @Html.DisplayFor(x => x.TraceLevel, new { @class = "form-control" })
+                                    @Html.LabelFor(x => x.ExceptionMessage, new { @class = "form-label" })
+                                    @Html.DisplayFor(x => x.ExceptionMessage, new { @class = "form-control" })
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.MethodName, new { @class = "form-label" })
+                                    @Html.DisplayFor(x => x.MethodName, new { @class = "form-control" })
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.FileName, new { @class = "form-label" })
+                                    @Html.DisplayFor(x => x.FileName, new { @class = "form-control" })
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.LineNumber, new { @class = "form-label" })
+                                    @Html.DisplayFor(x => x.LineNumber, new { @class = "form-control" })
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.Exception, new { @class = "form-label" })
+                                    @Html.DisplayFor(x => x.Exception, new { @class = "form-control" })
                                 </div>
                             </div>
                         </div>
