--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCountryMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCountryMaster/CreateEdit.cshtml
@@ -32,22 +32,29 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.CountryName, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.CountryName, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.CountryName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.CountryName)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.CountryCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.CountryCode, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.CountryCode, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.CountryCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SeqNo, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.SeqNo, new { @class = "form-control", type="number"})
+                                        @Html.TextBoxFor(x => x.SeqNo, new { @class = "form-control", type = "number" })
                                         @Html.ValidationMessageFor(x => x.SeqNo)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.CallingCode, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.CallingCode, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.CallingCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
