--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
@@ -77,10 +77,22 @@
         </div>
     </div>
     <div class="col-lg-3">
-        <div class="mb-3">
-            @Html.LabelFor(x => x.MobileNumber, new { @class = "form-label required" })
-            @Html.TextBoxFor(x => x.MobileNumber, new { @class = "form-control", onkeypress = "return CoditechCommon.ValidNumeric()" })
-            @Html.ValidationMessageFor(x => x.MobileNumber)
+        <div class="mb-3 row">
+            <div class="col-lg-3">
+                @Html.LabelFor(x => x.CallingCode, new { @class = "form-label" })
+                @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+           {
+               DropdownType = DropdownTypeEnum.CallingCode.ToString(),
+               DropdownName = "GeneralCountryMasterId",
+               DropdownSelectedValue = Model.GeneralCountryMasterId.ToString()
+           })
+                @Html.ValidationMessageFor(x => x.CallingCode)
+            </div>
+            <div class="col-lg-9">
+                @Html.LabelFor(x => x.MobileNumber, new { @class = "form-label required" })
+                @Html.TextBoxFor(x => x.MobileNumber, new { @class = "form-control", onkeypress = "return CoditechCommon.ValidNumeric()" })
+                @Html.ValidationMessageFor(x => x.MobileNumber)
+            </div>
         </div>
     </div>
     <div class="col-lg-3">
