--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
@@ -78,17 +78,18 @@
     </div>
     <div class="col-lg-3">
         <div class="mb-3 row">
-            <div class="col-lg-3">
-                @Html.LabelFor(x => x.CallingCode, new { @class = "form-label" })
+            <div class="col-lg-4">
+                @Html.LabelFor(x => x.CallingCode, new { @class = "form-label required" })
                 @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
            {
                DropdownType = DropdownTypeEnum.CallingCode.ToString(),
-               DropdownName = "GeneralCountryMasterId",
-               DropdownSelectedValue = Model.GeneralCountryMasterId.ToString()
+               DropdownName = "CallingCode",
+               DropdownSelectedValue = Model.CallingCode,
+               IsRequired = true
            })
                 @Html.ValidationMessageFor(x => x.CallingCode)
             </div>
-            <div class="col-lg-9">
+            <div class="col-lg-8">
                 @Html.LabelFor(x => x.MobileNumber, new { @class = "form-label required" })
                 @Html.TextBoxFor(x => x.MobileNumber, new { @class = "form-control", onkeypress = "return CoditechCommon.ValidNumeric()" })
                 @Html.ValidationMessageFor(x => x.MobileNumber)
