code check-in for Lists

--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_List.cshtml
@@ -30,11 +30,12 @@
                                     </div>
                                 }
                             </td>
+                            <td>@item.PersonCode</td>
                             <td>@item.FirstName</td>
                             <td>@item.LastName</td>
                             <td>@item.Gender</td>
                             <td>@item.MobileNumber</td>
-                            <td>@item.EmailId</td>
+                            <td>@item.EmailId</td>                          
                             <td>
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
                             </td>
