--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/_List.cshtml
@@ -30,6 +30,7 @@
                                     </div>
                                 }
                             </td>
+                            <td>@item.PersonCode</td>
                             <td>@item.FirstName</td>
                             <td>@item.LastName</td>
                             <td>@item.MobileNumber</td>
