--- a/Coditech.Project/Admin/Coditech.Admin/Views/LogMessage/LogMessage.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/LogMessage/LogMessage.cshtml
@@ -74,7 +74,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                        <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>Back</a>
                     </div>
                 </div>
             </div>
