--- a/Coditech.Project/Admin/Coditech.Admin/Views/LogMessage/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/LogMessage/List.cshtml
@@ -12,6 +12,7 @@
                 <div class="card">
                     <div class="card-header">
                         <span class="card-title">Log Message List</span>
+                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Delete?logMessageIds=all" role="button"><i class="fas fa-trash-alt me-2"></i>Delete All</a>
                     </div>
                     <div class="card-body">
                         <div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
