--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentrewiseEmailTemplate.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentrewiseEmailTemplate.cshtml
@@ -2,6 +2,7 @@
 @{
     Layout = null;
 }
+@Html.HiddenFor(m => m.OrganisationCentrewiseEmailTemplateId)
 <div class="col-lg-12">
     <div class="mb-3">
         @Html.LabelFor(x => x.Subject, new { @class = "form-label required" })
